test-yamls/ingress-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: svc1
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: svc2
            port:
              number: 80
